--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-kakao-maps-sdk": "^1.1.11",
     "react-query": "^3.39.3",
     "styled-components": "^6.0.7",
     "typescript": "5.1.6"
