--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
   "trailingComma": "all",
   "printWidth": 100,
   "parser": "typescript",
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "bracketSpacing": true
 }
