fix(labels): `YAMLException` 오류 수정

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -1,5 +1,6 @@
-feature: ['feature/*', 'feat/*'];
-fix: 'fix/*';
-refactor: 'refactor/*';
-chore: 'chore/*';
-document: ['document/*', 'docs/*'];
+chore: chore/*
+docs: docs/*
+feature: ['feature/*', 'feat/*']
+fix: fix/*
+refactor: refactor/*
+test: test/*
