--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@svgr/webpack": "^8.0.1",
@@ -17,8 +18,7 @@
     "react-dom": "18.2.0",
     "react-kakao-maps-sdk": "^1.1.11",
     "react-query": "^3.39.3",
-    "styled-components": "^6.0.7",
-    "typescript": "5.1.6"
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.32.5",
@@ -35,6 +35,15 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^3.0.1"
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.0",
+    "prettier": "^3.0.1",
+    "typescript": "^5.1.6"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
