--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-kakao-maps-sdk": "^1.1.11",
     "react-query": "^3.39.3",
     "styled-components": "^6.0.7",
+    "swiper": "^10.1.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
