--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@svgr/webpack": "^8.0.1",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.32.6",
+    "date-fns": "^2.30.0",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
