--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,31 +1,3 @@
 {
-  "root": true,
-  "env": {
-    "browser": true,
-    "es2020": true
-  },
-  "extends": [
-    "next/core-web-vitals",
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:@tanstack/eslint-plugin-query/recommended",
-    "plugin:import/recommended",
-    "plugin:prettier/recommended",
-    "prettier"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "@typescript-eslint",
-    "jsx-a11y",
-    "prettier",
-    "simple-import-sort",
-    "import"
-  ],
-  "rules": {
-    "prettier/prettier": ["error", { "endOfLine": "auto" }],
-    "simple-import-sort/imports": "warn",
-    "simple-import-sort/exports": "warn",
-    "import/no-unresolved": "off",
-    "@typescript-eslint/no-non-null-assertion": "off"
-  }
+  "extends": "next/core-web-vitals"
 }
