--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@svgr/webpack": "^8.0.1",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.32.6",
+    "chart.js": "^4.3.3",
     "date-fns": "^2.30.0",
     "next": "13.4.13",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-kakao-maps-sdk": "^1.1.11",
     "react-query": "^3.39.3",
@@ -57,8 +59,7 @@
   "lint-staged": {
     "**/*.{ts,tsx}": [
       "eslint --fix",
-      "prettier --write",
-      "lint:style"
+      "prettier --write"
     ]
   }
 }
