--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@svgr/webpack": "^8.0.1",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.32.6",
+    "axios": "^1.4.0",
+    "cookies-next": "^2.1.2",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-kakao-maps-sdk": "^1.1.11",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
