--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:style": "stylelint --ignore-path .gitignore \"./**/*.(css|tsx)\" --fix",
-    "prepare": "husky install"
+    "lint": "next lint"
   },
   "dependencies": {
     "@svgr/webpack": "^8.0.1",
@@ -24,9 +22,6 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@stylelint/postcss-css-in-js": "^0.38.0",
     "@tanstack/eslint-plugin-query": "^4.32.5",
     "@types/node": "^20.4.9",
     "@types/react": "^18.2.20",
@@ -41,23 +36,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.0",
-    "postcss": "^8.4.27",
-    "postcss-syntax": "^0.36.2",
     "prettier": "^3.0.1",
-    "stylelint": "^15.10.2",
-    "stylelint-config-clean-order": "^5.2.0",
-    "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-standard": "^34.0.0",
-    "stylelint-prettier": "^4.0.2",
     "typescript": "^5.1.6"
-  },
-  "lint-staged": {
-    "**/*.{ts,tsx}": [
-      "eslint --fix",
-      "prettier --write",
-      "lint:style"
-    ]
   }
 }
