--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-query": "^3.39.3",
     "styled-components": "^6.0.7",
     "swiper": "^10.1.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
