refactor: 토큰 저장, 가져오기 메서드 구현

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
       "@store/*": ["./app/_store/*"],
       "@styles/*": ["./app/_styles/*"],
       "@types/*": ["./app/_types/*"],
+      "@lib/*": ["./app/_lib/*"],
       "@assets/*": ["./public/assets/*"],
     }
   },
