--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,13 @@
       "@assets/*": ["./public/assets/*"],
     }
   },
-  "include": ["./app/_types/common/index.d.ts", "next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "./app/_types/common/index.d.ts",
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "node_modules/kakao.maps.d.ts/@types/services.Geocoder.d.ts",
+  ],
   "exclude": ["node_modules"]
 }
