--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@svgr/webpack": "^8.0.1",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.32.6",
+    "@types/navermaps": "^3.6.5",
     "axios": "^1.4.0",
     "chart.js": "^4.3.3",
     "cookies-next": "^2.1.2",
