--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.4.13",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-kakao-maps-sdk": "^1.1.11",
     "react-query": "^3.39.3",
@@ -34,6 +35,7 @@
     "@tanstack/eslint-plugin-query": "^4.32.5",
     "@types/node": "^20.4.9",
     "@types/react": "^18.2.20",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
